disaster-recovery/lamp/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: lamp-stack:apps/Deployment:lamp/apache-php
      deployment.kubernetes.io/revision: "27"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"lamp-stack:apps/Deployment:lamp/apache-php"},"name":"apache-php","namespace":"lamp"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"apache-php"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"apache-php"}},"spec":{"containers":[{"image":"httpd:alpine","name":"apache","ports":[{"containerPort":80}]},{"args":["sed -i 's/;pm.status_path = \\/status/pm.st [...]
    creationTimestamp: "2026-02-26T14:08:42Z"
    generation: 36
    name: apache-php
    namespace: lamp
    resourceVersion: "195573"
    uid: 60cd9038-6c32-4b2e-945c-4310c21555d7
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: apache-php
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-02-26T14:48:18Z"
        labels:
          app: apache-php
      spec:
        containers:
        - image: httpd:alpine
          imagePullPolicy: IfNotPresent
          name: apache
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
          - |
            sed -i 's/;pm.status_path = \/status/pm.status_path = \/status/g' /usr/local/etc/php-fpm.d/www.conf
            php-fpm
          command:
          - /bin/sh
          - -c
          image: php:fpm-alpine
          imagePullPolicy: IfNotPresent
          name: phpfpm
          ports:
          - containerPort: 9000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
          - --scrape_uri
          - http://localhost/server-status?auto
          image: bitnami/apache-exporter:latest
          imagePullPolicy: Always
          name: apache-exporter
          ports:
          - containerPort: 9117
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
          - name: PHP_FPM_SCRAPE_URI
            value: tcp://localhost:9000/status
          image: hipages/php-fpm_exporter:2
          imagePullPolicy: Always
          name: phpfpm-exporter
          ports:
          - containerPort: 9253
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T15:01:48Z"
      lastUpdateTime: "2026-02-26T15:03:19Z"
      message: ReplicaSet "apache-php-6c4757b76c" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-02-26T15:23:47Z"
      lastUpdateTime: "2026-02-26T15:23:47Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 36
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"postgresql","namespace":"lamp"},"spec":{"selector":{"matchLabels":{"app":"postgresql"}},"template":{"metadata":{"labels":{"app":"postgresql"}},"spec":{"containers":[{"env":[{"name":"POSTGRES_PASSWORD","value":"password"}],"image":"postgres:15-alpine","name":"postgres","ports":[{"containerPort":5432}]},{"env":[{"name":"DATA_SOURCE_NAME","value":"postgresql://postgres:password@localhost:5432/postgres?sslmode=d [...]
    creationTimestamp: "2026-02-26T13:40:42Z"
    generation: 3
    name: postgresql
    namespace: lamp
    resourceVersion: "177796"
    uid: 1ac019bf-f0f5-41de-b07c-92948140e75d
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: postgresql
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-02-26T14:21:37Z"
        labels:
          app: postgresql
      spec:
        containers:
        - env:
          - name: POSTGRES_PASSWORD
            value: password
          image: postgres:15-alpine
          imagePullPolicy: IfNotPresent
          name: postgres
          ports:
          - containerPort: 5432
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
          - name: DATA_SOURCE_NAME
            value: postgresql://postgres:password@localhost:5432/postgres?sslmode=disable
          image: prometheuscommunity/postgres-exporter:latest
          imagePullPolicy: Always
          name: postgres-exporter
          ports:
          - containerPort: 9187
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T13:40:55Z"
      lastUpdateTime: "2026-02-26T13:40:55Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-02-26T13:40:42Z"
      lastUpdateTime: "2026-02-26T14:21:40Z"
      message: ReplicaSet "postgresql-5587b4db4c" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
