disaster-recovery/lamp/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"bank-final","namespace":"lamp"},"spec":{"ingressClassName":"nginx","rules":[{"host":"bank.34.89.208.249.nip.io","http":{"paths":[{"backend":{"service":{"name":"apache-php","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}

        '
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    creationTimestamp: '2026-02-26T14:48:18Z'
    generation: 2
    name: bank-final
    namespace: lamp
    resourceVersion: '191911'
    uid: 7870f4b3-b771-4bd9-a8f0-bdba33a5d8b9
  spec:
    ingressClassName: nginx
    rules:
    - host: bank.34.89.208.249.nip.io
      http:
        paths:
        - backend:
            service:
              name: apache-php
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - bank.34.89.208.249.nip.io
      secretName: bank-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.156.15.202
kind: List
metadata: {}
